--- a/.github/workflows/build_on_push.yml
+++ b/.github/workflows/build_on_push.yml
@@ -24,10 +24,10 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: npm run build
+      run: npm install @vue/cli
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        npm run lint
+        npm run build
