--- a/.github/workflows/build_on_push.yml
+++ b/.github/workflows/build_on_push.yml
@@ -30,5 +30,6 @@ jobs:
     - name: Run a multi-line script
       run: |
         npm install
+        npm install --save @/fb
         npm run lint
         npm run build
